--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,41 +1,52 @@
 <ion-header>
   <ion-toolbar>
     <ion-title>
-      Tab One
+      List
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
-    <ion-card class="welcome-card">
-      <ion-img src="/assets/shapes.svg"></ion-img>
-      <ion-card-header>
-        <ion-card-subtitle>Get Started</ion-card-subtitle>
-        <ion-card-title>Welcome to Ionic</ion-card-title>
-      </ion-card-header>
-      <ion-card-content>
-        <p>Now that your app has been created, you'll want to start building out features and components. Check out some of the resources below for next steps.</p>
-      </ion-card-content>
+<ion-content >
+    <i>{{ id }}</i>
+    <i>{{ note }}</i>
+    <i>Status{{ status }}</i>
+    <form [formGroup]="noteForm" padding-right>
+      <div style="margin: 5px">
+        <p>Nombre de la nota: </p>
+        <ion-input type="text" class="style_inputs" value="Fiesta de cumpleaños" formControlName="name"></ion-input><br>        
+      </div>  
+      <div style="margin: 5px">
+        <p>Status: </p>
+        <ion-icon *ngIf="status_user"  name="radio-button-off"  formControlName="status" (click)="updateStatus(id, 1)" class="style_status style_status_off"></ion-icon>
+        <ion-icon *ngIf="!status_user" name="checkmark-circle" formControlName="status" (click)="updateStatus(id, 0)" class="style_status style_status_on"></ion-icon>     
+      </div>
+      <ion-button 
+        color="dark" 
+        expand="full" 
+        [disabled]="!noteForm.valid" 
+        (click)="updateNote()">Actualizar nota</ion-button>    
+    </form>
+    <ion-fab vertical="bottom" horizontal="end" slot="fixed">
+      <ion-fab-button><ion-icon name="add" (click)="createElement()"></ion-icon></ion-fab-button>
+    </ion-fab>
+    <br>
+    <h5><strong>Lista de elementos</strong></h5>
+
+    <ion-card  *ngFor="let item of items">
+        <ion-card-content style="margin-top:10px">
+          <div style="display: flex">
+            <ion-icon name="list-box"></ion-icon>
+            <p class="subtitle-element">{{ item.name }}</p>      
+          </div>
+          <div style="display: flex">
+            <ion-icon name="create"></ion-icon>
+            <p class="subtitle-element">{{ item.description }}</p>       
+          </div>
+          <div style="display: flex">
+            <ion-icon name="cash"></ion-icon>
+            <p class="subtitle-element">{{ item.price }}</p><br>        
+          </div>        
+        </ion-card-content>
     </ion-card>
-    <ion-list lines="none">
-      <ion-list-header>
-        <ion-label>Resources</ion-label>
-      </ion-list-header>
-      <ion-item href="https://ionicframework.com/docs/">
-        <ion-icon slot="start" color="medium" name="book"></ion-icon>
-        <ion-label>Ionic Documentation</ion-label>
-      </ion-item>
-      <ion-item href="https://ionicframework.com/docs/building/scaffolding">
-        <ion-icon slot="start" color="medium" name="build"></ion-icon>
-        <ion-label>Scaffold Out Your App</ion-label>
-      </ion-item>
-      <ion-item href="https://ionicframework.com/docs/layout/structure">
-        <ion-icon slot="start" color="medium" name="grid"></ion-icon>
-        <ion-label>Change Your App Layout</ion-label>
-      </ion-item>
-      <ion-item href="https://ionicframework.com/docs/theming/basics">
-        <ion-icon slot="start" color="medium" name="color-fill"></ion-icon>
-        <ion-label>Theme Your App</ion-label>
-      </ion-item>
-    </ion-list>
+    <br><br>
 </ion-content>
