Se agrego list tabs2

--- a/src/app/tab2/tab2.page.scss
+++ b/src/app/tab2/tab2.page.scss
@@ -1,1 +1,22 @@
+.style_status{
+    font-size: 50px;
+    margin:auto; 
+    margin-right: 10px;
+}
 
+ion-icon{
+    color:black;
+}
+
+.style_status_off{
+    color: red;
+}
+
+.style_status_on{
+    color: green;
+}
+
+.title_card{
+    margin-bottom: 10px; 
+    font-size: 20px;
+}
