--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -1,9 +1,36 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>
-      Tab Two
+    <ion-title style="width: 100%; text-align: center;">
+      Shopping List
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content></ion-content>
+<ion-content>
+    <ion-fab vertical="bottom" horizontal="end" slot="fixed">
+      <ion-fab-button><ion-icon name="reorder" (click)="createNote()"></ion-icon></ion-fab-button>
+    </ion-fab>
+
+    <ion-card  *ngFor="let note of notes">
+      <ion-card-content style="margin-top:10px">
+        <div style="display:flex">
+          <div style="display: flex">
+            <ion-icon *ngIf="note.status == 0" name="radio-button-off" class="style_status style_status_off" (click)="updateStatus(id, 1)"></ion-icon>
+            <ion-icon *ngIf="note.status == 1" name="checkmark-circle" class="style_status style_status_on" (click)="updateStatus(id, 0)"></ion-icon>
+          </div>
+          <div style="margin:auto; width: 100%;">
+            <ion-card-title class="title_card"><strong>{{ note.name }}</strong> </ion-card-title>
+            <div style="display:flex">
+              <ion-icon name="cash" style="font-size:22px"></ion-icon>
+              <p style="margin-left:10px; font-size: 18px;">15000</p>
+            </div>
+            <div style="display:flex;">
+              <ion-icon name="calendar" style="font-size:22px"></ion-icon>
+              <p style="margin-left:10px; font-size: 18px;">{{ note.date }}</p> 
+            </div>           
+          </div>
+          <ion-icon name="more"  style="font-size:30px;" (click)="Options(note.id)" ></ion-icon>
+        </div>
+      </ion-card-content>
+    </ion-card>
+</ion-content>
