--- a/src/app/tab1/tab1.page.scss
+++ b/src/app/tab1/tab1.page.scss
@@ -2,13 +2,12 @@
   border-style:solid; 
   border-width:2px;
   padding: 0px 5px 0px 5px !important;
-  margin-top: 10px !important;
+  margin-top: 5px !important;
+  margin-bottom: 5px !important;
 }
 
-.style_status{
-  font-size: 50px;
-  margin:auto; 
-  margin-right: 10px;
+.btn-options{
+  margin: 10px;
 }
 
 ion-icon{
